# pytorch-cpu-feedstock

./: .appveyor.yml  .cirun.yml  .drone.yml  .recipe_maintainers.json  .travis.yml  README.md  all.sh  azure-pipelines.yml  build-locally.py  conda-forge.yml  pixi.toml
recipe/: 0001-Fixup-cmake-USE_SYSTEM_PYBIND11.patch  0003-Fake-the-line-number-instead-of-Using-PyCode_Addr2Li.patch  15500.patch  CMakeLists.txt  README.md  activate.bat  activate.sh  bld.bat  bld_pytorch.bat  build.bat  build.sh  build_common.bat  build_common.sh  build_libtorch.sh  build_pytorch.bat  build_pytorch.sh  conda_build_config.yaml  const_auto_in_jit.patch  cpp_extension.patch  deactivate.bat  deactivate.sh  debug.bat  fix_blas_lapack.patch  fix_cross_compile.patch  fix_dispatch_apply_auto.patch  fix_mkl_win.patch  fix_msvc_build_issue.diff  fix_std_stdint.patch  link_blas_privately.patch  make_source.sh  meta.yaml  nvml.patch  only_intsall_torch_cpu.patch  protocol_buffers_3_11.patch  pypy_pyerr_warnexplicit.patch  recipe.yaml  run_pytorch_tests.py  smoke_test.py  write_activation_json.py
recipe/0.4.1/: conda_build_config.yaml  meta.yaml
recipe/cmake_test/: CMakeLists.txt  main.cpp
recipe/patches/: 0001-Allow-splayed-layouts.patch  0001-Force-usage-of-python-3-and-error-without-numpy.patch  0002-Allow-overriding-CUDA-related-paths.patch  0002-Fix-duplicate-linker-script.patch  0002-Help-find-numpy.patch  0002-Honor-CMAKE_ARGS-in-setup.py-cmake-invocation.patch  0002-Revert-Move-environment-variable-handling-from-setup.patch  0002-Use-BLAS_USE_CBLAS_DOT-for-OpenBLAS-builds.patch  0002-Use-new-nvtoolset.patch  0002-fix-FindCUDA.patch  0002b-Allow-overriding-CUDA-related-paths.patch  0003-Add-USE_SYSTEM_NVTX-option-138287.patch  0003-Allow-overriding-CUDA-related-paths.patch  0003-Fix-duplicate-linker-script.patch  0003-Force-usage-of-python-3-and-error-without-numpy.patch  0003-Restore-DILL_AVAILABLE-for-backwards-compat-with-tor.patch  0003-Update-sympy-version.patch  0003-Use-BLAS_USE_CBLAS_DOT-for-OpenBLAS-builds.patch  0003-fix-FindLAPACK.patch  0004-Allow-overriding-CUDA-related-paths.patch  0004-Fix-FindOpenBLAS.patch  0004-Fix-duplicate-linker-script.patch  0004-Fix-mkl-dependency.patch  0004-Help-find-numpy.patch  0004-Update-sympy-version.patch  0004-Use-BLAS_USE_CBLAS_DOT-for-OpenBLAS-builds.patch  0005-Allow-libcufile-for-conda-builds.patch  0005-Allow-overriding-CUDA-related-paths.patch  0005-CMAKE-Avoid-double-setting-of-LDFLAGS-130370.patch  0005-Fix-FindOpenBLAS.patch  0005-Fix-duplicate-linker-script.patch  0005-Use-BLAS_USE_CBLAS_DOT-for-OpenBLAS-builds.patch  0005-Use-system-nvtx3.patch  0005-point-include-paths-to-Conda-prefix-include-dir.patch  0005-use-our-own-PREFIX-for-include-paths-etc.patch  0006-3.13-fix-3.13-pickle-error-in-serialization.py-13603.patch  0006-Add-conda-prefix-to-inductor-include-lib-paths.patch  0006-Allow-overriding-CUDA-related-paths.patch  0006-Allow-users-to-overwrite-ld-with-environment-variabl.patch  0006-Update-sympy-version.patch  (+165 more)
recipe/patches_submodules/: 0001-Fix-bazel-linux-aarch64-gcc13-workflow-and-resolve-a.patch  0001-remove-DESTINATION-lib-from-CMake-install-directives.patch
recipe/patches_submodules/XNNPACK/: 0001-Fix-bazel-linux-aarch64-gcc13-workflow-and-resolve-a.patch
recipe/patches_submodules/fbgemm/: 0001-remove-DESTINATION-lib-from-CMake-install-directives.patch
recipe/pypy_patches/: 0001-Avoid-PyErrWarn_Explicit.patch  0002-Add-const-keyword-in-jit-python-init.cpp.patch  0003-Fake-the-line-number-instead-of-Using-PyCode_Addr2Li.patch  0004-const-keyword-in-init.patch  0005-Even-more-const.patch  0006-do_not_mangle_docstrings_for_pypy.patch
(+1349 files in other folders)
